...
        }
    }

    func setupMenuViewController(delegate: MenuViewControllerDelegate) {
        teardown()

        accessibilityIdentifier = "MenuContainerView"

        NSNotificationCenter.defaultCenter().addObserver(self, selector: "openMenu", name: "MenuContainerShouldOpen")
        NSNotificationCenter.defaultCenter().addObserver(self, selector: "closeMenu", name: "MenuContainerShouldReset")

        addDropShadow(CGSize(width: 2.5, height: 2.0), radius: 10.0, opacity: 0.75)

...
