...
                        <viewControllerLayoutGuide type="bottom" id="CmA-yP-9ss"/>
                    </layoutGuides>
                    <view key="view" hidden="YES" contentMode="scaleToFill" id="aeU-ar-cbC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Where to?" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="cyP-qn-7h8">
                                <rect key="frame" x="16" y="22" width="288" height="30"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" label="Tet"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="Exo2-ExtraLight" family="Exo 2" pointSize="24"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" returnKeyType="search"/>
...
