...
            <point key="canvasLocation" x="-3263" y="1968"/>
        </scene>
        <!--Setup Work Orders-->
        <scene sceneID="MLN-FU-gdS">
            <objects>
                <navigationController title="Setup Work Orders" id="N8x-Qa-0zE" customClass="JobWizardViewController" customModule="provide" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Work Orders" id="3tW-6m-ZP1">
                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-5"/>
                    </tabBarItem>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OXP-Og-8u9">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
