...
        let completeItem = UIBarButtonItem(title: "COMPLETE", style: .Plain, target: self, action: "complete:")
        completeItem.setTitleTextAttributes(AppearenceProxy.barButtonItemTitleTextAttributes(), forState: .Normal)
        return completeItem
    }

    private var scanItem: UIBarButtonItem! {
        let scanItem = UIBarButtonItem(title: "+ SCAN", style: .Plain, target: self, action: "scan:")
        scanItem.setTitleTextAttributes(AppearenceProxy.barButtonItemTitleTextAttributes(), forState: .Normal)
        return scanItem
    }

    private var startItem: UIBarButtonItem! {
        let startItem = UIBarButtonItem(title: "START", style: .Plain, target: self, action: "start:")
        startItem.setTitleTextAttributes(AppearenceProxy.barButtonItemTitleTextAttributes(), forState: .Normal)
        return startItem
    }

    private var targetView: UIView! {
        return delegate?.targetViewForViewController(self)
...
